@@ -1,3 +1,7 @@
+==
+
+* Open element with 'Space', also in editor.
+
 == v0.6 / 2016-07-23
 
 * Use any editor (general XEmbed support in edit-message window): Emacs
